--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 1rem 2rem;
-            background-color: #333;
+            background-color: #1e293b;
             color: white;
             position: relative;
         }
