--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 position: absolute;
                 right: 0;
                 top: 100%;
-                background-color: #333;
+                background-color: #1e293b;
                 flex-direction: column;
                 width: 100%;
                 padding: 1rem 0;
